--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
-    <link rel="shortcut icon" href="images/tildafavicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/furo_favicon.ico" type="image/x-icon" />
     <!-- Assets -->
 <!--    <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" />-->
 <!--    <link rel="stylesheet" href="css/tilda-blocks-2.12.css?t=1612628037" type="text/css" media="all" />-->
