add mobile styles

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                 </div>
                 <div class="top_cover_form">
 
-                    <form role="form" action="https://formsubmit.co/Fshmorgilov@gmail.com "
+                    <form role="form" action="https://formsubmit.co/Fshmorgilov@gmail.com"
                           method="POST">
+                        <input type="hidden" name="_subject" value="furo_group landing">
                         <div class="t-form">
                             <div >
                                 <div class="t-input-block" style="position: relative; overflow: hidden;">
@@ -261,8 +262,9 @@
                     </div>
                     <div class="form">
 
-                        <form role="form" action="https://formsubmit.co/Fshmorgilov@gmail.com "
+                        <form role="form" action="https://formsubmit.co/Fshmorgilov@gmail.com"
                               method="POST">
+                            <input type="hidden" name="_subject" value="furo_group landing">
                             <div class="t-form red">
                                 <div >
                                     <div class="t-input-block" style="position: relative; overflow: hidden;">
@@ -292,6 +294,35 @@
 
 
 </div>
+<!--<script>-->
+<!--    $(document).ready(function() {-->
+
+<!--        // process the form-->
+<!--        $('form').submit(function(event) {-->
+
+<!--            let email = $('input[name=email]').val();-->
+
+<!--            // process the form-->
+<!--            $.ajax({-->
+<!--                method: 'POST',-->
+<!--                url: 'https://formsubmit.co/Fshmorgilov@gmail.com',-->
+<!--                dataType: 'json',-->
+<!--                accepts: 'application/json',-->
+<!--                data: {-->
+<!--                    name: "furo group landing",-->
+<!--                    message: "sign up for news",-->
+<!--                    email: email-->
+<!--                },-->
+<!--                success: (data) => console.log(data),-->
+<!--                error: (err) => console.log(err)-->
+<!--            });-->
+
+<!--            // stop the form from submitting the normal way and refreshing the page-->
+<!--            event.preventDefault();-->
+<!--        });-->
+
+<!--    });-->
+<!--</script>-->
 
 </body>
 </html>
