--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!--    <link rel="stylesheet" href="css/tilda-menusub-1.0.min.css" type="text/css" media="all" />-->
 <!--    <link rel="stylesheet" href="css/tilda-slds-1.4.min.css" type="text/css" media="all" />-->
 <!--    <link rel="stylesheet" href="css/tilda-zoom-2.0.min.css" type="text/css" media="all" />-->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/body.css" type="text/css" media="all" />
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/tilda-scripts-2.8.min.js"></script>
@@ -37,6 +38,10 @@
     <script src="js/tilda-forms-1.0.min.js" charset="utf-8"></script>
     <script src="js/tilda-zero-forms-1.0.min.js" charset="utf-8"></script>
     <script type="text/javascript">window.dataLayer = window.dataLayer || [];</script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
 </head>
 <body style="margin:0;">
 
