--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/tild3331-6364-4131-b666-653039363939__logo.svg" />
     <link rel="canonical" href="http://furo.group">
+    <meta name="yandex-verification" content="612eaa85ca5ed85b" />
     <!--/metatextblock-->
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
