--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/tild3331-6364-4131-b666-653039363939__logo.svg" />
     <link rel="canonical" href="http://furo.group">
+    <meta name="yandex-verification" content="612eaa85ca5ed85b" />
     <!--/metatextblock-->
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
@@ -149,32 +150,37 @@
                       <button type="button" data-bs-target="#carousel_block2" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active" data-bs-interval="10000">
-                        <div class="bl-2">
+                      <div class="carousel-item active" data-bs-interval="100000">
+                        <div class="bl-row bl-2">
                             <img src="images/tild6432-3239-4635-b264-363637383164__3st_discount2.svg" alt="" />
-                            <div>
-                                Reward your clients with loyalty points
+                            <div class="column_flex">
+                                <h2>
+                                    Reward your clients with loyalty points
+                                </h2>
+                                <div>
+                                    You may reward your customers with loyalty points, setting up the amount in percentage for every purchase they make in your store. Your customer may view their loyalty points in an app.
+                                </div>
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item" data-bs-interval="10000">
-                        <div class="bl-2">
+                      <div class="carousel-item" data-bs-interval="100000">
+                        <div class="bl-row bl-2">
                             <img src="images/tild3635-3461-4661-b931-636231343232__Vector.svg" alt="" />
                             <div>
                                 Get advantage of Loyalty Share feature
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item" data-bs-interval="10000">
-                        <div class="bl-2">
+                      <div class="carousel-item" data-bs-interval="100000">
+                        <div class="bl-row bl-2">
                             <img src="images/tild6362-3135-4733-b338-326431643665__Tilda_Icons_39_IT_te.svg" alt="" />
                             <div>
                                 Easy to install loyalty solution for your on-line or off-line store
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item" data-bs-interval="10000">
-                        <div class="bl-2">
+                      <div class="carousel-item" data-bs-interval="100000">
+                        <div class="bl-row bl-2">
                             <img src="images/tild3866-3330-4362-a464-353661373934__analytics.svg" alt="" />
                             <div>
                                 Get insights on your data using statistics
