--- a/index.html
+++ b/index.html
@@ -295,12 +295,10 @@
                             * - 3 months trial period
                         </p>
                         </div>
-                        <!-- <button type="submit" class="t-submit red-2"  data-bs-toggle="modal" data-bs-target="#connectModal" onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'one'})">
-                            Get
-                        </button> -->
-                        <button type="submit" class="t-submit red-2"  data-bs-toggle="modal" data-bs-target="#connectModal">
+                        <button type="submit" class="t-submit red-2"  data-bs-toggle="modal" data-bs-target="#connectModal" onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'one'})">
                             Get
                         </button>
+
                         </div>
                     </div>
 
@@ -325,7 +323,7 @@
                             * - 3 months trial period
                         </p>
                     </div>
-                          <button type="submit" class="t-submit red-2"  onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'two'})">
+                          <button type="submit" class="t-submit red-2"  data-bs-toggle="modal" data-bs-target="#connectModal" onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'two'})">
                             Get
                         </button>
                         </div>
@@ -347,12 +345,15 @@
                             * - unlimited clients
                         </p>
                     </div>
-                          <button type="submit" class="t-submit red-2"  onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'three'})">
+                          <button type="submit" class="t-submit red-2"  data-bs-toggle="modal" data-bs-target="#connectModal" onclick="amplitude.getInstance().logEvent('GET_PRICE', {'plan': 'three'})">
                             Get
                         </button>
                         </div>
                     </div>
 
+                </div>
+                <div class="prc">
+                    Need more information? Please ask us: <a href="mailto:business@furo.group">business@furo.group</a>
                 </div>
 
             </div>
@@ -442,6 +443,12 @@
                         </div>
                     </div>
     
+                </div>
+                <div class="bl-6 footer">
+                    <div>
+                        Furo Systems &copy; 2021
+                    </div>
+                    <a href="mailto:business@furo.group">business@furo.group</a>
                 </div>
             </div>
         </div>
